[project]
name = "test-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "package1",
]

[tool.uv.sources]
package1 = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
]

[dependency-groups]
dev = [
    "twine>=6.2.0",
]
